# trill

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  launch.sh  result.json  setup-hooks.sh
.githooks/: pre-commit
assets/: trill.webm
scripts/: anvil.sh  normal.sh  resp.json  test.s.sol  versus.sh  weth.sh
scripts/broadcast/test.s.sol/31337/: run-1712937778.json  run-1712937935.json  run-1712937942.json  run-1712938076.json  run-1712938107.json  run-1712938116.json  run-1712938178.json  run-1712938229.json  run-1712938255.json  run-1712938718.json  run-1712938913.json  run-1712939055.json  run-1712939069.json  run-1712939133.json  run-1712939147.json  run-latest.json
scripts/cache/: solidity-files-cache.json
scripts/src/: test.sol
src/: app.rs  args.rs  cli.rs  error.rs  events.rs  lib.rs  log.rs  main.rs  provider.rs  render.rs  state.rs  tui.rs  utils.rs
src/commands/: inspect.rs  mod.rs  profile.rs
