[package]
name = "trill"
version = "0.1.0"
edition = "2021"
description = "A CLI blockchain explorer compatible with EVM-supporting chains."

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.0"
log = "0.4"
env_logger = "0.9"
color-eyre = "0.6.3"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "89f14f9", features = [
    "contract",
    "providers",
    "provider-http",
    "rpc-types-trace",
    "rpc-types-eth",
] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3.30"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"