[package]
name = "trill"
version = "0.1.0"
edition = "2021"
description = "A TUI memory profiler tool for EVM smart contracts"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.0"
log = "0.4"
env_logger = "0.9"
color-eyre = "0.6.3"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "89f14f9", features = [
    "contract",
    "providers",
    "provider-http",
    "rpc-types-trace",
    "rpc-types-eth",
] }
opcode-parser = { git = "https://github.com/EmperorOrokuSaki/opcode-parser" }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3.30"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
clap = { version = "4.5.4", features = ["derive"]}
tracing-error = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
directories = "5.0.1"
lazy_static = "1.4.0"
itertools = "0.12.1"